[project]
name = "sixfour-trainer"
version = "0.1.0"
description = "Mac-side MLX trainer for SixFour aesthetic organs."
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.20",
    "torch>=2.4",
    "coremltools>=8.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
