[package]
name = "look-nn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

# v1 is pure-Rust (forward net + gradient-free ES over the 768 Haar coefficients —
# the encoding COMPETITION.md committed to). No external deps ⇒ the workspace's
# `cargo deny` permissive-license gate stays green. The `burn` autodiff backend is
# the v2 gradient-training upgrade, added only after its dep tree is deny-vetted.
[dependencies]
analysis-core = { path = "../analysis-core" }
